--- a/pbiviz/style/visual.less
+++ b/pbiviz/style/visual.less
@@ -1,51 +1,53 @@
 p {
-    font-size: 20px;
-    font-weight: bold;
-    em {
-        background: yellow;
-        padding: 5px;
-        
-    }
+  font-size: 20px;
+  font-weight: bold;
+
+  em {
+    background: yellow;
+    padding: 5px;
+  }
 }
+
 iframe {
-    width:100%;
-    height:calc(100% - 75px);
+  width: 100%;
+  height: calc(100% - 75px);
 }
-.xAxis path {
+
+.x-axis-path {
+  display: none;
+}
+
+.help-link {
+  position: absolute;
+  top: 0px; /* stylelint-disable-line */
+  right: 12px;
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #80b0e0;
+  border-radius: 20px;
+  color: #80b0e0;
+  text-align: center;
+  font-size: 16px;
+  line-height: 20px;
+
+  &.hidden {
     display: none;
+  }
 }
 
-.helpLink {
-    position: absolute;
-    top: 0px;
-    right: 12px;
-    display: block;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #80B0E0;
-    border-radius: 20px;
-    color: #80B0E0;
-    text-align: center;
-    font-size: 16px;
-    line-height: 20px;
-
-    &.hidden {
-        display: none;
-    }
+.landing-page {
+  position: absolute;
+  text-align: center;
+  top: 12px;
+  font-size: 12pt;
+  right: 15px;
 }
 
-.LandingPage {
-    position: absolute;
-    text-align: center;
-    top: 12px;
-    font-size: 12pt;
-    right: 15px;
-}
-
-.LandingPageHelpLink {
-    position: absolute;
-    text-decoration: underline;
-    top: 50px;
-    font-size: 12pt;
-    right: 15px;
+.landing-page-help-link {
+  position: absolute;
+  text-decoration: underline;
+  top: 50px;
+  font-size: 12pt;
+  right: 15px;
 }
